# orderbook

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.server  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
client/: nginx.conf  package-lock.json
client/src/: App.tsx  index.css
client/src/components/: DepthChart.tsx  Header.tsx  OrderBookView.tsx  OrderForm.tsx  SimulatorPanel.tsx  TradeHistory.tsx
client/src/hooks/: useOrderBook.ts  useWebSocket.ts
client/src/services/: api.ts
client/src/types/: index.ts
engine/: CMakeLists.txt
engine/include/orderbook/: Constants.hpp  JsonEngine.hpp  LevelInfo.hpp  Order.hpp  OrderBook.hpp  OrderBookLevelInfos.hpp  OrderModify.hpp  Trade.hpp  Types.hpp
engine/src/: JsonEngine.cpp  Order.cpp  OrderBook.cpp  main.cpp  server.cpp
engine/tests/: CMakeLists.txt  OrderBookTests.cpp  OrderTests.cpp  TradeTests.cpp
server/: Dockerfile  jest.config.js  package-lock.json  package.json
server/__tests__/: orders.test.ts  setup.ts  trades.test.ts
server/src/: index.ts
server/src/migrations/: 001_initial.sql
server/src/routes/: book.ts  orders.ts  simulator.ts  trades.ts
server/src/services/: db.ts  engineBridge.ts  marketSimulator.ts
server/src/websocket/: handler.ts
